// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`undefined: renders correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-sm"
  >
    <div>
      <div
        aria-controls="collapse-example-basic-content"
        aria-expanded="true"
        id="collapse-example-basic-toggle"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-caret-down fa-fw mr-1"
          data-icon="caret-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={{}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"
            fill="currentColor"
            style={{}}
          />
        </svg>
        Collapsed Title
      </div>
      <div
        aria-labelledby="collapse-example-basic-toggle"
        id="collapse-example-basic-content"
      >
        Collapsed Content!
      </div>
    </div>
  </div>
  <div
    className="col-sm"
  >
    <pre>
      <code>
        
&lt;Collapsing id="collapse-example-1" startOpen&gt;
  {({ isOpen, togglerProps, collapsedProps, Caret }) =&gt; (
    &lt;div&gt;
      &lt;div {...togglerProps}&gt;
        &lt;Caret spaced /&gt;
        Collapsed Title
      &lt;/div&gt;
      {isOpen && &lt;div {...collapsedProps}&gt;Collapsed Content!&lt;/div&gt;}
    &lt;/div&gt;
  )}
&lt;/Collapsing&gt;
        
      </code>
    </pre>
  </div>
</div>
`;

exports[`undefined: renders correctly 2`] = `
<div
  className="row"
>
  <div
    className="col-sm"
  >
    <div
      className="card mb-3"
    >
      <div
        aria-controls="collapse-example-card-content"
        aria-expanded="true"
        className="card-header cursor-pointer pl-2"
        id="collapse-example-card-toggle"
        onClick={[Function]}
      >
        <h1
          className="mb-0 h4 d-inline-block"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-caret-down fa-fw mr-1"
            data-icon="caret-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={{}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"
              fill="currentColor"
              style={{}}
            />
          </svg>
          Collapsed Title
        </h1>
      </div>
      <div
        aria-labelledby="collapse-example-card-toggle"
        className="card-body pl-2"
        id="collapse-example-card-content"
      >
        <p
          className="h5 p-4"
        >
          Collapsed Content!
        </p>
      </div>
    </div>
  </div>
</div>
`;
